home icon animation

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     d="M24.1846 26.388L24.5 26.6444L24.8154 26.388L46.033 9.13796L47.1252 8.25L45.7176 8.25L3.28238 8.25L1.87477 8.25L2.96696 9.13796L24.1846 26.388Z"
                     fill="black" stroke="white" class="flap" />
             </svg>
-            <h2 class="message-title">Messages</h2>
+            <h2 class="messages-title">Messages</h2>
         </div>
     </div>
 
